--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="/styles/architect.css">
 </head>
 <body>
+    <!-- header starts here -->
+     <header>
+        <nav>
+            <h3>G3 Architects</h3>
+            <ul>
+                <li><a href=""></a>Home</li>
+                <li><a href=""></a>About</li>
+                <li><a href=""></a>Contact</li>
+                <li><a href=""></a>Login</li>
+            </ul>
+        </nav>
+
+     </header>
+    <!-- header ends here -->
+     <!-- main starts here -->
+      <main>
+
+      </main>
+     <!-- main ends here -->
+      <!-- footer starts here -->
+       <footer>
+
+       </footer>
+      <!-- footer ends here -->
     
 </body>
 </html>
