--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header starts here -->
      <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href=""></a>Home</li>
                 <li><a href=""></a>About</li>
@@ -53,6 +53,21 @@
 
             </div>
          </section>
+
+         <!-- features section -->
+          <section class="features">
+
+          </section>
+
+          <!-- facts section -->
+
+          <section class="facts">
+
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+
+          </section>
 
       </main>
      <!-- main ends here -->
