--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
       <!-- footer starts here -->
        <footer>
 
+        <h2 class="footer"> All rights reserved copyright@2023 startup landing page design</h2>
+
        </footer>
       <!-- footer ends here -->
     
